# comfyui-router

./: LICENSE  README.md  README_NEW.md  __init__.py  celery_worker.py  node_list.json  pyproject.toml  test_celery.py
comfy_nodes/: __init__.py  util_nodes.py
comfyui_router/: cli.py  launch_comfyuis.py  launch_workers.py  tasks.py  utils.py
comfyui_router/launchers/: launch_comfyuis.py  launch_workers.py
comfyui_router/utils/: __init__.py  comfyui_workflow_executor.py  comfyui_workflow_gradio_generator.py  config.py  configs.py  logger.py  utils.py
notebooks/: dev.ipynb  dev_distributed_workers.ipynb  dev_router_gradio.ipynb
setup/: rabbitmq.sh
