[tool.poetry]
name = "comfyui-router"
version = "0.1.0"
description = "Distributed task dispatcher for comfyui clusters"
authors = ["yada <trojblue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.4.0"
msgpack = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
